# extractous

./: ACTUAL_PERFORMANCE_RESULTS.md  FINAL_SUMMARY.md  OPTIMIZATION_SUMMARY.md  actionable_recommendations.md  benchmarking_strategy.md  faster_alternatives.md  implementation_examples.md  performance_improvements.md  performance_test.sh  test_optimizations.rs
extractous-core/: Cargo.toml
extractous-core/benches/: extractor.rs
extractous-core/src/: extractor.rs  format_detection.rs  lib.rs  pure_rust_parsers.rs  simd_text.rs
extractous-core/src/tika/: wrappers.rs
